# BukkitChatManager-MCDR

./: .gitignore  README.md  check.py  clean_pycache.py  gitrepo.toml  mcdreforged.plugin.json  pyproject.toml  setup.py
.github/scripts/: get_link.py
.github/workflows/: build.yml  ci.yml  plugin-catalogue.yml  release.yml
bkchat_manager/: __init__.py  config.py  handler.py  installer.py  utils.py
doc/: CHANGELOG.md  PRMessage.md  RELEASE.md
extra/bukkit_plg_src/PlayerLog/: pom.xml
extra/bukkit_plg_src/PlayerLog/src/main/java/com/Mooling0602/PlayerLog/: LogInterceptor.java
extra/bukkit_plg_src/PlayerLog/src/main/resources/: plugin.yml
src/: .gitignore  mcdreforged.plugin.json  requirements.txt
src/bkchat_manager/: __init__.py  chat.py  config.py  handler.py  installer.py  runtime.py  utils.py
