[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bukkit-chat-manager"
dynamic = ["version"]
description = "Manage in-game chat for Bukkit-based Minecraft servers through MCDReforged."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mooling0602" }]
requires-python = ">=3.12"
dependencies = [
    "auto-uuid-api-mcdr",
    "mcdreforged>=2.15.0",
    "packaging",
    "psutil",
]

[dependency-groups]
dev = ["ruff", "ty"]

[tool.hatch.version]
source = "regex"
path = "src/mcdreforged.plugin.json"
pattern = '"version"\s*:\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/bkchat_manager"]

[tool.ruff]
target-version = "py312"

[tool.uv.sources]
auto-uuid-api-mcdr = { git = "https://github.com/Mooling0602/Auto-UUID-API-MCDR.git" }
